Implemented viewmodel as generic

--- a/src/FrontendAccountManagement.Web/Views/Shared/DataGridView.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/DataGridView.cshtml
@@ -1,4 +1,4 @@
-﻿@model FrontendAccountManagement.Web.Controllers.AccountManagement.DataGridViewModel
+﻿@model dynamic
 
 <table class="govuk-table">
     <thead class="govuk-table__head">
