--- a/src/FrontendAccountManagement.Web/Views/Shared/Components/PrimaryNavigation/default.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Components/PrimaryNavigation/default.cshtml
@@ -1,7 +1,7 @@
 @using FrontendAccountManagement.Web.ViewModels.Shared
 @model PrimaryNavigationModel
 
-<nav aria-label="Menu" class="govuk-header__navigation ">
+<nav aria-label="@Localizer["PrimaryNavigation.Menu"]" class="govuk-header__navigation ">
   <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide menu" hidden>@Localizer["PrimaryNavigation.Menu"]</button>
   <ul id="navigation" class="govuk-header__navigation-list">
         @foreach (var item in Model.Items)
