--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyName.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyName.cshtml
@@ -32,7 +32,7 @@
                                    type="text"
                                    gov-for="OrganisationName"
                                    gov-value="@Model.OrganisationName"
-                                   aria-describedby="CompanyName-hint">
+                                   aria-describedby="OrganisationName">
                         </div>
                     </div>
 
