--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -58,17 +58,25 @@
                         <dd class="govuk-summary-list__actions">
                             @if (Model.OrganisationType == OrganisationType.CompaniesHouseCompany)
                             {
-                                    <a href="~/@PagePath.UpdateCompanyName" class="govuk-link govuk-link--no-visited-state">
+                                <a href="~/@PagePath.ConfirmCompanyDetails" class="govuk-link govuk-link--no-visited-state">
                                     @SharedLocalizer["Change"]
                                     <span class="govuk-visually-hidden"></span>
                                 </a>
                             }
                             else
                             {
+                                <feature name="@FeatureName.ManageCompanyDetailChanges">
                                     <a href="~/@PagePath.UpdateCompanyName" class="govuk-link govuk-link--no-visited-state">
-                                    @SharedLocalizer["Change"]
-                                    <span class="govuk-visually-hidden"></span>
-                                </a>
+                                        @SharedLocalizer["Change"]
+                                        <span class="govuk-visually-hidden"></span>
+                                    </a>
+                                </feature>
+                                <feature name="@FeatureName.ManageCompanyDetailChanges" negate="true">
+                                    <a href="~/@PagePath.ChangeCompanyDetails" class="govuk-link govuk-link--no-visited-state">
+                                        @SharedLocalizer["Change"]
+                                        <span class="govuk-visually-hidden"></span>
+                                    </a>
+                                </feature>
                             }
                         </dd>
                         }
