add missing welsh translation

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/NonCompaniesHouseUkNation.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/NonCompaniesHouseUkNation.cshtml
@@ -2,7 +2,7 @@
 @using FrontendAccountManagement.Web.Extensions
 @using FrontendAccountManagement.Web.Constants.Enums
 
-@model FrontendAccountManagement.Web.ViewModels.AccountManagement.UkNationViewModel
+@model FrontendAccountManagement.Web.ViewModels.AccountManagement.NonCompaniesHouseUkNationViewModel
 
 @{
     ViewData["Title"] = Localizer["NonCompaniesHouseUkNation.Title"];
