Feature/manage non companies house organisation (#190)
* Feature/408632 update company address (#122)

* feature/408632-update-company-address

* feature/408632-update-company-address

* feature/408632 update company address

* feature/408632 update company address

* feature/408632 update company address

* feature/408632 update company address

* feature/408632 update company address

* Feature/userstory/408835 select new address (#123)

* Initial changes

* Fixing tests and back link pages

* Adding new session params

* Feature/408343 update company name (#125)

* feature/408343 update company name

* feature/408343 update company name

* Feature/409103 non companies house update business address (#126)

* #425612 (#119)

Description List (Summary list)
Fix  the semantic relationship between items

* Edit Business Address Implementation Including Ancillary Session Classes (#121)

* Edit Business Address Implementation Including Ancillary Session Classes

* Fixed Missing Mock Instantiation

* Fix Save Navigation Destination

* Fix Back Link and Correct UKNation ActionMethod Navigation

* Remove PostcodeLookupFailedKey

* Implemeneted Handling Back Link Where No Previous Page

* Fix Merge Issues

* feature/408749 business address postcode (#127)

* Feature/userstory/408835 select new address integration (#128)

* Adding more tests, and integrating with other pages

* Fixing build.

* feature/408343 update company name integration (#129)

* Feature/ad408613 add new org name (#131)

* add  new page for update organisation name

* Changed AccountController

* merge code

* Unit tests in progress

* add test method

* add user type check

* fix test issue

* tests fixed

* Fixed PR comments

* copied accountmanagementcontroller from feature branch

* AccountManagmentcontroller fixed

* reverted appsettings

* session added in post

* Added test for session update

* Adrians Implementation of non-companie

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -4,6 +4,7 @@
 @using FrontendAccountManagement.Core.Models
 @using FrontendAccountManagement.Core.Enums;
 @using FrontendAccountManagement.Web.Constants
+@using FrontendAccountManagement.Web.Configs
 @addTagHelper *, Microsoft.FeatureManagement.AspNetCore
 
 @model ManageAccountViewModel
@@ -58,17 +59,25 @@
                         <dd class="govuk-summary-list__actions">
                             @if (Model.OrganisationType == OrganisationType.CompaniesHouseCompany)
                             {
-                                <a href="~/@PagePath.CompanyDetailsCheck" class="govuk-link govuk-link--no-visited-state">
+                                        <a href="~/@PagePath.CompanyDetailsCheck" class="govuk-link govuk-link--no-visited-state">
                                     @SharedLocalizer["Change"]
                                     <span class="govuk-visually-hidden"></span>
                                 </a>
                             }
                             else
                             {
+                                <feature name="@FeatureFlags.ManageCompanyDetailChanges">
+                                    <a href="~/@PagePath.UpdateCompanyName" class="govuk-link govuk-link--no-visited-state">
+                                        @SharedLocalizer["Change"]
+                                        <span class="govuk-visually-hidden"></span>
+                                    </a>
+                                </feature>
+                                <feature name="@FeatureFlags.ManageCompanyDetailChanges" negate="true">
                                     <a href="~/@PagePath.ChangeCompanyDetails" class="govuk-link govuk-link--no-visited-state">
-                                    @SharedLocalizer["Change"]
-                                    <span class="govuk-visually-hidden"></span>
-                                </a>
+                                        @SharedLocalizer["Change"]
+                                        <span class="govuk-visually-hidden"></span>
+                                    </a>
+                                </feature>
                             }
                         </dd>
                         }
