--- a/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_BackLink.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_BackLink.cshtml
@@ -1,3 +1,8 @@
-@model string
+@using FrontendAccountManagement.Web.ViewModels.Shared
+@{
+    var backLinkModel = @Model as BackLinkModel;
+}
 
-<a href="@Model" class="govuk-back-link">@SharedLocalizer["Back"]</a>
+<a href="@backLinkModel.PagePath" class="govuk-back-link"
+   aria-label="@((backLinkModel.AriaLabelLocalizerName != null) ? @SharedLocalizer[@backLinkModel.AriaLabelLocalizerName] : null)"
+>@SharedLocalizer["Back"]</a>
