--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsHaveNotChanged.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsHaveNotChanged.cshtml
@@ -63,7 +63,7 @@
                     </summary>
                     <div class="govuk-details__text">
                         <p>@Localizer["WrongDetailsP1"]</p>
-                        <p>@Localizer["WrongDetailsP2"]<a target="_blank" rel="noreferrer" class="govuk-link" href="@Model.CompaniesHouseChangeDetailsUrl">@Localizer["WrongDetailsP3"]</a>.</p>
+                        <p>@Localizer["WrongDetailsP2"]<a target="_blank" rel="noopener noreferrer" class="govuk-link" href="@Model.CompaniesHouseChangeDetailsUrl">@Localizer["WrongDetailsP3"]</a>.</p>
                     </div>
                 </details>
                 <a class="govuk-link" href="@PagePath.ManageAccount">@Localizer["GoBack"]</a>
