--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
@@ -39,7 +39,7 @@
                             </div>
                             <div>
                                 @Localizer["WrongDetailsDescription"]
-                                <a class="govuk-link" href="@Model.ExternalCompanyHouseChangeRequestLink" target="_blank" rel="noreferrer"> @Localizer["WrongDetailsDescription2"]</a>
+                                <a class="govuk-link" href="@Model.ExternalCompanyHouseChangeRequestLink" target="_blank" rel="noopener noreferrer"> @Localizer["WrongDetailsDescription2"]</a>
                             </div>
                         </div>
                     </details>
