--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
@@ -38,8 +38,8 @@
                                 @Localizer["WrongDetailsHelp"]
                             </div>
                             <div>
-                                @Localizer["WrongDetailsDescription"] 
-                                <a class="govuk-link" href="@Model.ExternalCompanyHouseChangeRequestLink" target="_blank"> @Localizer["WrongDetailsDescription2"]</a>
+                                @Localizer["WrongDetailsDescription"]
+                                <a class="govuk-link" href="@Model.ExternalCompanyHouseChangeRequestLink" target="_blank" rel="noopener noreferrer"> @Localizer["WrongDetailsDescription2"]</a>
                             </div>
                         </div>
                     </details>
