--- a/src/FrontendAccountManagement.Web/Views/Shared/_Layout.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/_Layout.cshtml
@@ -91,9 +91,15 @@
 
     @RenderBody()
 
+    <div id="overlay"></div>
+    <div class="session-timeout-container" id="session-timeout-container-id">
+        @await Html.PartialAsync("_TimeoutSessionWarning")
+    </div>
+
     @await Html.PartialAsync("Partials/Govuk/_Footer", ExternalUrlsOptions.Value)
 
     <script src="~/js/govuk.js"></script>
+    <script src="~/js/sessionTimeout.js"></script>
     <script nonce="@scriptNonce">window.GOVUKFrontend.initAll()</script>
 
     @await RenderSectionAsync("Scripts", required: false)
