Added Feature Flag

--- a/src/FrontendAccountManagement.Web/Views/Shared/_Layout.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/_Layout.cshtml
@@ -90,11 +90,7 @@
     </div>
 
     @RenderBody()
-
-    <div id="overlay"></div>
-    <div class="session-timeout-container" id="session-timeout-container-id">
-        @await Html.PartialAsync("_TimeoutSessionWarning")
-    </div>
+    @await Component.InvokeAsync("SessionTimeoutWarning")
 
     @await Html.PartialAsync("Partials/Govuk/_Footer", ExternalUrlsOptions.Value)
 
