#496577 Session Timeout warnings On Account Management (#201)
* Feature - 496577 To build Session Timeout Warning

* Updated URL

* Removing blank spaces

* Unit Test for home controller

* Added Feature Flag

---------

Co-authored-by: Brizpal Deora <brizpal.deora@defra.onmicrosoft.com>

--- a/src/FrontendAccountManagement.Web/Views/Shared/_Layout.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/_Layout.cshtml
@@ -90,10 +90,12 @@
     </div>
 
     @RenderBody()
+    @await Component.InvokeAsync("SessionTimeoutWarning")
 
     @await Html.PartialAsync("Partials/Govuk/_Footer", ExternalUrlsOptions.Value)
 
     <script src="~/js/govuk.js"></script>
+    <script src="~/js/sessionTimeout.js"></script>
     <script nonce="@scriptNonce">window.GOVUKFrontend.initAll()</script>
 
     @await RenderSectionAsync("Scripts", required: false)
