--- a/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_Footer.cshtml
@@ -1,5 +1,10 @@
 @using FrontendAccountManagement.Web.Extensions
 @using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.FeatureManagement
+@using FrontendAccountManagement.Web.Configs
+
+@inject IFeatureManager _featureManager
+
 @model FrontendAccountManagement.Web.Configs.ExternalUrlsOptions
 
 @{
@@ -17,48 +22,61 @@
     }
 }
 
-<footer class="govuk-footer " role="contentinfo">
-    <div class="govuk-width-container ">
-        <div class="govuk-footer__meta">
-            <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
-
-                <h2 class="govuk-heading-m">@Localizer["Footer.GetHelp"]</h2>
-
-                <p class="govuk-body">@Localizer["Footer.Email"]: <a class="govuk-link govuk-link--no-visited-state" href="mailto:eprcustomerservice@defra.gov.uk">eprcustomerservice@defra.gov.uk</a></p>
-
-                <p class="govuk-body govuk-!-margin-bottom-2">@Localizer["Footer.Telephone"]: 0300 060 0002</p>
-
-                <p class="govuk-body">@Localizer["Footer.CustomerServiceTimes"]</p>
-
-                <h2 class="govuk-visually-hidden">Support links</h2>
-                <ul class="govuk-footer__inline-list govuk-!-margin-top-7">
-                    <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="@cookieLink" aria-label="@Localizer["Footer.CookiesAriaLabel"]">
-                            @Localizer["Footer.Cookies"]
-                        </a>
-                    </li>
-                    <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-privacy-policy")" target="_blank" rel="noopener noreferrer" aria-label="@Localizer["Footer.PrivacyAriaLabel"]">
-                            @Localizer["Footer.Privacy"]
-                        </a>
-                    </li>
-                    <li class="govuk-footer__inline-list-item">
-                        <a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-accessibility-statement")" target="_blank" rel="noopener noreferrer" aria-label="@Localizer["Footer.AccessibilityAriaLabel"]">
-                            @Localizer["Footer.Accessibility"]
-                        </a>
-                    </li>
-                </ul>
-                <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
-                    <path fill="currentColor" d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"></path>
-                </svg>
-                <span class="govuk-footer__licence-description">
-                    @Localizer["Footer.LicenceDescription1"]
-                    <a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">@Localizer["Footer.LicenceDescription2"]</a>@Localizer["Footer.LicenceDescription3"]
-                </span>
-            </div>
-            <div class="govuk-footer__meta-item">
-                <a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">@Localizer["Footer.CrownCopyright"]</a>
-            </div>
-        </div>
-    </div>
+<footer class="govuk-footer" role="contentinfo">
+	<div class="govuk-width-container ">
+		<div class="govuk-footer__navigation">
+			<h2 class="govuk-!-margin-top-3 govuk-footer__heading govuk-heading-m">@Localizer["Footer.GetHelp"]</h2>
+			<div class="govuk-footer__section govuk-grid-column-two-thirds">
+				<ul class="govuk-list govuk-list--spaced govuk-!-margin-bottom-7">
+					<li>@Localizer["Footer.Email"]: <a href="mailto: eprcustomerservice@defra.gov.uk">eprcustomerservice@defra.gov.uk</a></li>
+					<li>@Localizer["Footer.Phone"]: 0300 060 0002</li>
+					<li>@Localizer["Footer.CustomerServiceTimes"]</li>
+				</ul>
+			</div>
+			@if (await _featureManager.IsEnabledAsync(FeatureFlags.ShowYourFeedbackFooter))
+			{
+				<div class="govuk-footer__section govuk-grid-column-one-thirds">
+					<p class="govuk-body">
+						<a class="govuk-footer__link" href="https://defragroup.eu.qualtrics.com/jfe/form/SV_a2Bm7vw3cht5B6C" rel="noreferrer noopener" target="_blank">@Localizer["Footer.ReportAProblem"]</a>
+					</p>
+					<p class="govuk-body">
+						<a class="govuk-footer__link" href="https://defragroup.eu.qualtrics.com/jfe/form/SV_e5HK8ijKACZGi1M" rel="noreferrer noopener" target="_blank">@Localizer["Footer.GiveFeedback"]</a>
+					</p>
+				</div>
+			}
+		</div>
+		<hr class="govuk-footer__section-break" />
+		<div class="govuk-footer__meta">
+			<div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
+				<h2 class="govuk-visually-hidden">Support links</h2>
+				<ul class="govuk-footer__inline-list">
+					<li class="govuk-footer__inline-list-item">
+						<a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-privacy-policy")" target="_blank" rel="noopener noreferrer">
+							@Localizer["Footer.Privacy"]
+						</a>
+					</li>
+					<li class="govuk-footer__inline-list-item">
+						<a class="govuk-footer__link" asp-controller="Cookies" asp-action="Detail" asp-route-returnurl="@Model">
+							@Localizer["Footer.Cookies"]
+						</a>
+					</li>
+					<li class="govuk-footer__inline-list-item">
+						<a class="govuk-footer__link" href="@DecorateUrl("https://www.gov.uk/guidance/extended-producer-responsibility-for-packaging-accessibility-statement")" target="_blank" rel="noopener noreferrer">
+							@Localizer["Footer.Accessibility"]
+						</a>
+					</li>
+				</ul>
+				<svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
+					<path fill="currentColor" d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145" />
+				</svg>
+				<span class="govuk-footer__licence-description">
+					@Localizer["Footer.AllContent"]
+					<a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">@Localizer["Footer.OpenGovernment"]</a>, @Localizer["Footer.ExceptWhere"]
+				</span>
+			</div>
+			<div class="govuk-footer__meta-item">
+				<a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">&copy @Localizer["Footer.CrownCopyright"]</a>
+			</div>
+		</div>
+	</div>
 </footer>
