--- a/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
@@ -20,31 +20,31 @@
             </div>
 
             <div class="govuk-summary-list__row">
-                <div class="govuk-heading-l govuk-!-margin-bottom-8 govuk-!-margin-right-3">
+                <div class="govuk-heading-m govuk-!-font-weight-bold govuk-!-margin-right-3">
                     <label class="govuk-label" for="Email">@Localizer["Email"]</label>
                 </div>
-                <div class="govuk-summary-list__value">Model.Email</div>
+                <div class="govuk-summary-list__value">@Model.Email</div>
             </div>
 
             <div class="govuk-summary-list__row">
-                <div class="govuk-heading-l govuk-!-margin-bottom-8 govuk-!-margin-right-3">
+                <div class="govuk-heading-m govuk-!-font-weight-bold govuk-!-margin-right-3">
                     <label class="govuk-label" for="AccountRole">@Localizer["AccountRole"]</label>
                 </div>
-                <div class="govuk-summary-list__value">Model.AccountRole</div>
+                <div class="govuk-summary-list__value">@Model.AccountRole</div>
             </div>
 
             <div class="govuk-summary-list__row">
-                <div class="govuk-heading-l govuk-!-margin-bottom-8 govuk-!-margin-right-3">
+                <div class="govuk-heading-m govuk-!-font-weight-bold govuk-!-margin-right-3">
                     <label class="govuk-label" for="AccountPermissions">@Localizer["AccountPermissions"]</label>
                 </div>
-                <div class="govuk-summary-list__value">Model.AccountPermissions</div>
+                <div class="govuk-summary-list__value">@Model.AccountPermissions</div>
             </div>
 
             <div class="govuk-summary-list__row">
-                <div class="govuk-heading-l govuk-!-margin-bottom-8 govuk-!-margin-right-3">
+                <div class="govuk-heading-m govuk-!-font-weight-bold govuk-!-margin-right-3">
                     <label class="govuk-label" for="AddedBy">@Localizer["AddedBy"]</label>
                 </div>
-                <div class="govuk-summary-list__value">Model.AddedBy</div>
+                <div class="govuk-summary-list__value">@Model.AddedBy</div>
             </div>
         </div>
     </main>
