update add user integration

--- a/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/TeamMemberEmail.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/TeamMemberEmail.cshtml
@@ -9,7 +9,7 @@
     var errorsViewModel = new ErrorsViewModel(ViewData.ModelState.ToErrorDictionary(), Localizer);
 }
 
-@using (Html.BeginForm("TeamMemberEmail", "AccountManagement", FormMethod.Post))
+@using (Html.BeginForm("TeamMemberEmail", "ReExAccountManagement", FormMethod.Post))
 {
     <div class="govuk-width-container">
         <main class="govuk-main-wrapper govuk-!-padding-top-4" id="main-content" role="main">
