--- a/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/RemoveTeamMemberConfirmation.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/RemoveTeamMemberConfirmation.cshtml
@@ -14,6 +14,7 @@
     @Html.HiddenFor(x => x.LastName)
     @Html.HiddenFor(x => x.PersonId)
     @Html.HiddenFor(x => x.OrganisationId)
+    @Html.HiddenFor(x => x.Role)
     
     <div class="govuk-width-container">
         <main class="govuk-main-wrapper" id="main-content" role="main">
@@ -27,9 +28,9 @@
                     <button class="govuk-button govuk-button--secondary" data-module="govuk-button" type="submit">
                         @Localizer["Yes.Continue"]
                     </button>
-                    <button class="govuk-button" data-module="govuk-button">
+                    <a class="govuk-button govuk-button--secondary" role="button" href="https://localhost:7068/epr-prn/manage-organisation#team">
                         @Localizer["Dont.Remove"]
-                    </button>
+                    </a>
                 </div>
             </div>
         </main>
