--- a/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
@@ -15,6 +15,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
                 <h1 class="govuk-heading-l govuk-!-margin-bottom-8">
+                    <!--Test comment, please remove-->
                     @Localizer["DetailsAndAccountPermissions"]
                 </h1>
             </div>
