Clean up commented code

--- a/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
@@ -14,20 +14,10 @@
 
 <div class="govuk-width-container">
     <main class="govuk-main-wrapper" id="main-content" role="main">
-<<<<<<< HEAD
         <form asp-controller="ReExAccountManagement" asp-action="RemoveTeamMemberPreConfirmation" method="get">
             <input type="hidden" asp-for="OrganisationId" />
             <input type="hidden" asp-for="PersonId" />
             <input type="hidden" asp-for="EnrolmentId" />
-=======
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
-                <h1 class="govuk-heading-l govuk-!-margin-bottom-8">
-                    <!--Test comment, please remove-->
-                    @Localizer["DetailsAndAccountPermissions"]
-                </h1>
-            </div>
->>>>>>> d8c4b886c3cd8882d6f985a46f590077c845d80a
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
@@ -97,7 +87,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div>
+                <div class="govuk-!-text-align-right">
                     <button class="govuk-button govuk-button--warning" data-module="govuk-button" aria-label="@Localizer["Remove"]">
                         @Localizer["Remove"]
                     </button>
