--- a/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
@@ -18,6 +18,9 @@
             <input type="hidden" asp-for="OrganisationId" />
             <input type="hidden" asp-for="PersonId" />
             <input type="hidden" asp-for="EnrolmentId" />
+            <input type="hidden" asp-for="FirstName" />
+            <input type="hidden" asp-for="LastName" />
+            <input type="hidden" asp-for="AccountRole" />
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
