--- a/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/ViewDetails.cshtml
@@ -1,6 +1,7 @@
 @using FrontendAccountManagement.Web.Extensions
 @using FrontendAccountManagement.Web.ViewModels.Shared.GovUK
 @using FrontendAccountManagement.Web.ViewModels.ReExAccountManagement
+@using FrontendAccountManagement.Core.Extensions;
 
 @inject IViewLocalizer Localizer
 
@@ -56,7 +57,7 @@
                                     <span class="govuk-!-font-weight-bold govuk-!-font-size-16">@Localizer["AccountRole"]</span>
                                 </td>
                                 <td class="govuk-table__cell govuk-!-width-one-half">
-                                    <span class="govuk-!-font-size-16">@Model.AccountRole</span>
+                                    <span class="govuk-!-font-size-16">@Model.AccountRole.GetRoleName()</span>
                                 </td>
                                 <td class="govuk-table__cell govuk-!-width-one-quarter">
                                     <span class="govuk-!-font-weight-bold govuk-!-font-size-16">&nbsp;</span>
