fixed email validation issues

--- a/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/TeamMemberEmail.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/ReExAccountManagement/TeamMemberEmail.cshtml
@@ -34,7 +34,7 @@
                             
                             <input class="govuk-input govuk-input--error"
                                    id="Email"
-                                   name="email"
+                                   name="Email"
                                    type="text"
                                    spellcheck="false"
                                    autocomplete="email"
@@ -45,7 +45,7 @@
                         {
                             <input class="govuk-input"
                                    id="Email"
-                                   name="email"
+                                   name="Email"
                                    value="@Model.SavedEmail"
                                    type="text"
                                    spellcheck="false"
@@ -55,7 +55,7 @@
                         }
                     </div>
                     
-                    <button class="govuk-button" data-module="govuk-button">
+                    <button class="govuk-button" data-module="govuk-button" type="submit">
                         @SharedLocalizer["Continue"]
                     </button>
                 </div>
